issueHistogram legibility

--- a/src/App.css
+++ b/src/App.css
@@ -767,12 +767,12 @@ a:active {
     margin: 0rem !important;
     padding: 1.5rem 1.5rem !important;
     pointer-events: all;
-    overflow: auto;
+    overflow-y: scroll;
 }
 
 .expand-issue::-webkit-scrollbar {
-    display: none;
-    /* width: 3px; */
+    /* display: none; */
+    width: 8px;
 }
 
 .issues-arrow {
@@ -820,6 +820,7 @@ a:active {
     height: 100%;
     overflow: auto;
     background-color: white;
+    overflow-y: scroll;
     /* border: 1px solid black; */
 }
 
@@ -896,7 +897,6 @@ a:active {
 
 .map-tooltip>* {
     border: 1px solid black;
-    padding: 5px 10px 5px 10px;
 }
 
 .map-tooltip>*:not(:first-child) {
